--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -20,7 +20,7 @@ log4j.appender.hibernate.loggingEventClass=LogEvent
 log4j.rootLogger=warn, stdout
 
 log4j.logger.org.hibernate.SQL=trace
-log4j.logger.se.kth=trace
+log4j.logger.org.makumba.parade=trace
 log4j.logger.org.hibernate.event.def.AbstractFlushingEventListener=fatal
 #log4j.logger.org.hibernate=debug
 
